# vanguard2

./: .gitignore  Cargo.toml  build.rs
datasrc/: Cargo.toml
doc/: recursive_event.md  recursive_gotchas.md
etc/: vangard.conf  vanguard.conf
src/: client.rs  lib.rs  main.rs  msgbuf_pool.rs  resolver.rs
src/auth/: auth_server.rs  dynamic_server_old.rs  error.rs  memory_zone.rs  memory_zone_test.rs  mod.rs  rdataset.rs  zone.rs  zone_loader.rs  zones.rs
src/cache/: cache.rs  message_cache.rs  message_cache_entry.rs  message_cache_entry_builder.rs  message_util.rs  rrset_cache.rs
src/config/: mod.rs
src/controller/: controller.rs  dynamic_server.rs  mod.rs
src/controller/proto/: dynamic_update_interface.proto  rrset.proto
src/error/: mod.rs
src/forwarder/: forwarder.rs  group.rs  manager.rs
src/iterator/: aggregate_client.rs  delegation_point.rs  forwarder.rs  host_selector.rs  iter_event.rs  iterator.rs  iterator_test.rs  message_helper.rs  mod.rs  nsclient.rs  roothint.rs
src/iterator/cache/: cache.rs  message_cache.rs  message_cache_entry.rs  message_util.rs  rrset_cache.rs
src/iterator/testdata/: cname_chain.yaml  forward.yaml  glue_all_in_zone.yaml  glue_has_cname.yaml  glue_out_of_zone.yaml  some_nameserver_offline.yaml
src/iterator/util/: message_helper.rs  mod.rs
src/logger/: mod.rs
src/metrics/: mod.rs
src/nameserver/: mod.rs  nameserver_store.rs  sender.rs
src/recursor/: mock_resolver.rs  mod.rs  recursor.rs  resolver.rs  roothint.rs  running_query.rs
src/recursor/forwarder/: group.rs  manager.rs
src/recursor/nsas/: address_entry.rs  message_util.rs  mod.rs  nameserver_cache.rs  nameserver_fetcher.rs  ns_address_store.rs  test_helper.rs  zone_cache.rs  zone_fetcher.rs
src/server/: coder.rs  mod.rs  query.rs  server.rs  tcp_server.rs  tcp_stream_coder.rs  udp_server.rs  udp_stream_coder.rs
src/types/: handler.rs  layer.rs  message_classifier.rs  mod.rs  query.rs  view.rs
testdata/: example.zone
