[package]
name = "vanguard2"
version = "0.1.0"
authors = ["thesinglecloud <hanfeng@zdns.cn>"]
edition = "2018"
publish = false

[dependencies]
clap = { version = "2.32", default-features = false}
r53 = { git = "https://github.com/ben-han-cn/r53"}
domaintree = { git = "https://github.com/ben-han-cn/domaintree"}
failure = { git = "https://github.com/ben-han-cn/cement-rs", package = "failure_ext"}
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
lru = "0.1.15"
#tokio = { version = "0.2", features = ["full"] }
tokio =  "=0.2.0-alpha.6"
tokio-net =  "=0.2.0-alpha.6"
tokio-codec =  "=0.2.0-alpha.6"
tokio-timer =  "=0.3.0-alpha.6"
#tokio-util = { version = "0.2", features = ["full"] }
futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await"] }
futures-core-preview = "=0.3.0-alpha.19"
futures-util-preview = "=0.3.0-alpha.19"
#futures = "0.3"
bytes = "0.4"
lazy_static = "1.3.0"
#tonic = { git = "https://github.com/hyperium/tonic" }
tonic = "0.1.0-alpha.6"
prost = "0.5"
prost-derive = "0.5"

[[bin]]
name = "vanguard2"
path = "src/main.rs"

[build-dependencies]
#tonic-build = { git = "https://github.com/hyperium/tonic" }
tonic-build = "0.1.0-alpha.6"
