[package]
name = "vanguard2"
version = "0.1.0"
authors = ["thesinglecloud <hanfeng@zdns.cn>"]
edition = "2018"
publish = false

[dependencies]
clap = { version = "2.32", default-features = false}
r53 = { git = "https://github.com/ben-han-cn/r53"}
domaintree = { git = "https://github.com/ben-han-cn/domaintree"}
failure = { git = "https://github.com/ben-han-cn/cement-rs", package = "failure_ext"}
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
lru = "0.1.15"
tokio =  "=0.2.0-alpha.6"
tokio-net =  "=0.2.0-alpha.6"
tokio-codec =  "=0.2.0-alpha.6"
tokio-timer =  "=0.3.0-alpha.6"
futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await"] }
bytes = "0.4"
lazy_static = "1.3.0"
tonic = "0.1.0-alpha.6"
prost = "0.5"
prost-derive = "0.5"

[[bin]]
name = "vanguard2"
path = "src/main.rs"

[[bin]]
name = "vanguard2-client"
path = "src/client.rs"

[build-dependencies]
tonic-build = "0.1.0-alpha.6"
