[package]
name = "vanguard2"
version = "0.1.0"
authors = ["thesinglecloud <hanfeng@zdns.cn>"]
edition = "2018"
publish = false

[dependencies]
clap = { version = "2.32", default-features = false}
r53 = { git = "https://github.com/ben-han-cn/r53"}
domaintree = { git = "https://github.com/ben-han-cn/domaintree"}
failure = { git = "https://github.com/ben-han-cn/cement-rs", package = "failure_ext"}
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
lru = "0.1.15"
tokio =  { version = "0.2.6", features = ["tcp", "udp", "time"]}
tokio-util =  { version = "0.2", features = ["codec", "udp"]}
futures = "0.3"
bytes = "0.5"
tonic = "0.1.0"
prost = "0.6"
prost-derive = "0.6"
hyper = "0.13"
prometheus = "0.7"
lazy_static = "1.4.0"

[[bin]]
name = "vanguard2"
path = "src/main.rs"

[[bin]]
name = "vanguard2-client"
path = "src/client.rs"

[build-dependencies]
tonic-build = "0.1.0"
