[package]
name = "datasrc"
version = "0.1.0"
authors = ["thesinglecloud <hanfeng@zdns.cn>"]
edition = "2018"
publish = false

[dependencies]
r53 = { git = "https://github.com/ben-han-cn/r53"}
failure = { git = "https://github.com/ben-han-cn/cement-rs", package = "failure_ext"}

[dev-dependencies]
proptest = "0.9.4"
